2005-05-20 Kornél Pál <http://www.kornelpal.hu/>
	
	* Fixed Bug #53169 - SqlDataReader incorrectly returns bigint as decimal
		Note: The fix works around the limitations of TDS 7.0 to avoid this
		difference between Mono and .NET Framework TDS 8.0 should be used instead.

2005-05-20 Umadevi S <sumadevi@novell.com>
	
	* Fixed Bug 74948 - SqlParameter also takes DBNull Value.
		Correct some attributes stuff of 1.1 and 2.0 for SqlParameter.cs

2005-05-20 Umadevi S <sumadevi@novell.com>

	* Continuing on implementation for bulkcopy and notification
		Added files SqlNotificationEventArgs.cs, OnChangeEventHandler.cs
		Modified SqlRowUpdatingEventArgs.cs

2005-05-19 Umadevi S <sumadevi@novell.com>
	
	* For implementation of bulkcopy and notifications added files
		SqlBulkCopyOptions.cs,SqlBulkCopyColumnMapping.cs,SqlNotificationAuthType.cs
		SqlNotificationTransports.cs,SqlRowsCopiedEventArgs.cs, SqlRowsCopiedEventHandler.cs

2005-05-19  Umadevi S <sumadevi@novell.com>

	*  Corrected types,enum values of SqlNotificationType,SqlNotificationSource,
		SqlNotificationInfo and added new method in SqlRowUpdatingEventArgs.cs
	(For implementation of bulkcopy/notifications)

2005-04-19  Sureshkumar T  <tsureshkumar@novell.com>

	* SqlDataReader.cs: NextResult (): Re-create schema table for each
	result set. don't re-use, as it may be referenced from somewhere.

2005-04-07  Sureshkumar T  <tsureshkumar@novell.com>
	    Ankit Jain     <radical@corewars.org>

	* SqlConnection.cs: Implemented additional connection string
	property "Asynchronous Processing".

	* SqlCommand.cs: Implemented Asynchronous command execution API.

	* SqlAsyncState.cs: A internal state object for asynchronous
	operations.

	* SqlAsyncResult.cs: Added. Class to hold result for asynchronous
	queries.

2005-03-28  Sureshkumar T  <tsureshkumar@novell.com>

	* SqlCommand.cs: Execute: Add a semicolon at the end of
	CommandText. Multiple semicolon's are not being complained.

	fixes bug #74134.
